[project]
name = "foodie-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "thirdbot",email = "astroll656@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "streamlit (>=1.53.0,<2.0.0)",
    "ultralytics (>=8.4.5,<9.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
